--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Aquí irá el título de la página</h1>
     <p>Esto es un párrafo desde github</p>
+    <p>Esto es un párrafo desde Visual Studio</p>
 </body>
 </html>
