--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    
+<style href="MiEstilo.css>
 <body>
     <h1>Aquí irá el título de la página</h1>
     <p>Esto es un párrafo desde github</p>
